--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,16 +7,12 @@
             <h1><a href="/">Isao Blog</a></h1>
         </div>
 
+    {% for post in posts %}
         <div>
-            <p>Published: 2021/11/7</p>
-            <h2><a href="">My first Post</a></h2>
-            <p>Hello my blog</p>
+            <p>published: {{ post.published_date }}</p>
+            <h2><a href="">{{ post.title}}</a></h2>
+            <p>{{ post.text|linebreaksbr}}</p>
         </div>
-
-        <div>
-            <p>Published: 2021/11/8</p>
-            <h2><a href="">Second</a></h2>
-            <p>Nice to meet you</p>
-        </div>
+    {% endfor %}
     </body>
 </html>
